# buttonhandler

./: CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml  AndroidPhysicalButtonHandler.kt  CMakeLists.txt  button_handler.cpp
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/buttonhandler_example/: MainActivity.kt
example/lib/: main.dart
lib/: buttonhandler.dart  buttonhandler_bindings_generated.dart
src/: CMakeLists.txt  buttonhandler.c
